--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Menu Mockup</title>
+  <title>Menu Mockups</title>
   <style>
     :root{
       --brand:#034ca8;
