--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 <header>
   <button class="hamburger" id="openBtn">☰</button>
-  <div style="margin-left:15px;font-weight:900;color:var(--brand);">MENU MOCKUP</div>
+  <div style="margin-left:15px;font-weight:900;color:var(--brand);">MENU MOCKUPS</div>
 </header>
 
 <div id="overlay"></div>
